ixed issue with rec_gid_redirect table column naming, and subsequest analytics issues.

--- a/MLHD.ipynb
+++ b/MLHD.ipynb
@@ -2,19 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import psycopg2\n",
     "import pandas as pd\n",
     "import numpy as np\n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n",
+    "from IPython.display import Markdown as MD"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -44,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -59,8 +60,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 7.03 s, sys: 2.44 s, total: 9.47 s\n",
-      "Wall time: 18.7 s\n"
+      "CPU times: user 6.91 s, sys: 2.68 s, total: 9.59 s\n",
+      "Wall time: 18.5 s\n"
      ]
     },
     {
@@ -121,7 +122,7 @@
        "4  b55f1db3-c6d2-4645-b908-03e1017a99c2"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -137,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -152,8 +153,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 1.27 s, sys: 171 ms, total: 1.44 s\n",
-      "Wall time: 7.06 s\n"
+      "CPU times: user 1.38 s, sys: 166 ms, total: 1.55 s\n",
+      "Wall time: 7.12 s\n"
      ]
     },
     {
@@ -177,50 +178,50 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>old</th>\n",
        "      <th>new</th>\n",
+       "      <th>old</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
+       "      <td>d04bb774-5104-4cc2-9c70-1e76bd9917e1</td>\n",
+       "      <td>841bdd72-f415-4731-8e37-71b53db18d93</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
        "      <td>ddda2877-0fbd-495e-a19b-6e9f4e97d711</td>\n",
        "      <td>8edeb408-437d-4e97-93f8-2fb982927fb0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>ee141eff-5b22-4e8b-b01a-754b4d0e5222</td>\n",
-       "      <td>80f99633-339d-4ffd-9668-a81831dda379</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>4672ac68-27ac-4843-9c19-d283018a7c17</td>\n",
-       "      <td>cd24bef4-d513-4e42-8cd4-0b8be1e654b7</td>\n",
+       "      <td>6db0efa0-46e0-4f27-94ce-6803513787be</td>\n",
+       "      <td>de4ed46b-a78b-4bd4-94f5-82f5829931e0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>6db9ab2f-1bb7-42bb-a1cf-62935e906c2a</td>\n",
-       "      <td>f2b7197a-d85b-4d26-ae51-2f0826ac69c7</td>\n",
+       "      <td>8dda3e70-02f3-4032-871c-b16ba184a9f6</td>\n",
+       "      <td>89d8fd1e-7372-42cf-8ab0-6d4d46576a86</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>609d7dbc-d6e1-4ffa-85ed-38163d98af85</td>\n",
-       "      <td>c90df32e-6a58-4bc0-9e19-8aacd4772474</td>\n",
+       "      <td>af42602a-a32f-463a-8283-ea4c8bace06c</td>\n",
+       "      <td>0d806561-1121-43c9-a440-5a5c7d3be82d</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                    old                                   new\n",
-       "0  ddda2877-0fbd-495e-a19b-6e9f4e97d711  8edeb408-437d-4e97-93f8-2fb982927fb0\n",
-       "1  ee141eff-5b22-4e8b-b01a-754b4d0e5222  80f99633-339d-4ffd-9668-a81831dda379\n",
-       "2  4672ac68-27ac-4843-9c19-d283018a7c17  cd24bef4-d513-4e42-8cd4-0b8be1e654b7\n",
-       "3  6db9ab2f-1bb7-42bb-a1cf-62935e906c2a  f2b7197a-d85b-4d26-ae51-2f0826ac69c7\n",
-       "4  609d7dbc-d6e1-4ffa-85ed-38163d98af85  c90df32e-6a58-4bc0-9e19-8aacd4772474"
+       "                                    new                                   old\n",
+       "0  d04bb774-5104-4cc2-9c70-1e76bd9917e1  841bdd72-f415-4731-8e37-71b53db18d93\n",
+       "1  ddda2877-0fbd-495e-a19b-6e9f4e97d711  8edeb408-437d-4e97-93f8-2fb982927fb0\n",
+       "2  6db0efa0-46e0-4f27-94ce-6803513787be  de4ed46b-a78b-4bd4-94f5-82f5829931e0\n",
+       "3  8dda3e70-02f3-4032-871c-b16ba184a9f6  89d8fd1e-7372-42cf-8ab0-6d4d46576a86\n",
+       "4  af42602a-a32f-463a-8283-ea4c8bace06c  0d806561-1121-43c9-a440-5a5c7d3be82d"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -229,14 +230,16 @@
     "%%time\n",
     "# Loading redirect table SQL table\n",
     "\n",
-    "MB_redirects = pd.read_sql('select r.gid, rgr.gid from recording r join recording_gid_redirect rgr on rgr.new_id = r.id', con = conn)\n",
-    "MB_redirects.columns = ['old', 'new']\n",
+    "# MB_redirects = pd.read_sql('select r.gid, rgr.gid from recording r join recording_gid_redirect rgr on rgr.new_id = r.id', con = conn)\n",
+    "# MB_redirects.columns = ['old', 'new']\n",
+    "\n",
+    "MB_redirects = pd.read_sql('select r.gid AS new, rgr.gid AS old from recording r join recording_gid_redirect rgr on rgr.new_id = r.id', con=conn)\n",
     "MB_redirects.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -251,8 +254,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 9.5 s, sys: 3.14 s, total: 12.6 s\n",
-      "Wall time: 25.3 s\n"
+      "CPU times: user 9.62 s, sys: 3.44 s, total: 13.1 s\n",
+      "Wall time: 25.2 s\n"
      ]
     },
     {
@@ -307,7 +310,7 @@
        "Index: [9b02977e-a03b-4a6b-a9a9-06e722bdcd7a, 43da7544-6283-3159-84f9-537fe823a1a7, 0b6b6283-a5a8-4560-9fa8-f68a430d86ea, fa124f9a-d8ea-36a3-bed3-c817fdbe13e2, e56c6d3c-09cf-33a0-81c5-ceade77c35dc]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -324,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -339,8 +342,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 2.35 s, sys: 675 ms, total: 3.03 s\n",
-      "Wall time: 6.13 s\n"
+      "CPU times: user 2.29 s, sys: 769 ms, total: 3.06 s\n",
+      "Wall time: 6.12 s\n"
      ]
     },
     {
@@ -407,7 +410,7 @@
        "4  9ba7a9b9-a21c-4b12-8771-4c108b08b3e2  13b3875a-c89a-4be5-a6e4-0ca9164bc41d"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -425,7 +428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -440,8 +443,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 526 ms, sys: 93.7 ms, total: 620 ms\n",
-      "Wall time: 1.31 s\n"
+      "CPU times: user 550 ms, sys: 100 ms, total: 650 ms\n",
+      "Wall time: 1.34 s\n"
      ]
     },
     {
@@ -502,7 +505,7 @@
        "4  7b4a548e-a01a-49b7-82e7-b49efeb9732c"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -524,7 +527,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -617,7 +620,7 @@
        "4  e427c52c-60f4-3df4-9493-2df0734d85aa  eced9a9b-cd59-40f8-a580-f27094bd8a89  "
       ]
      },
-     "execution_count": 23,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -650,7 +653,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -698,7 +701,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -734,7 +737,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -767,15 +770,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 15.4 s, sys: 111 ms, total: 15.5 s\n",
-      "Wall time: 15.5 s\n"
+      "CPU times: user 16.5 s, sys: 36.1 ms, total: 16.6 s\n",
+      "Wall time: 16.6 s\n"
      ]
     },
     {
@@ -785,7 +788,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -812,15 +815,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 8.52 s, sys: 30.1 ms, total: 8.55 s\n",
-      "Wall time: 8.56 s\n"
+      "CPU times: user 9.26 s, sys: 0 ns, total: 9.26 s\n",
+      "Wall time: 9.27 s\n"
      ]
     },
     {
@@ -831,7 +834,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -856,25 +859,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 536 ms, sys: 0 ns, total: 536 ms\n",
-      "Wall time: 533 ms\n"
+      "CPU times: user 804 ms, sys: 0 ns, total: 804 ms\n",
+      "Wall time: 800 ms\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "False    85921\n",
+       "True     84773\n",
+       "False     1148\n",
        "dtype: int64"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -893,26 +897,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 613 ms, sys: 0 ns, total: 613 ms\n",
-      "Wall time: 609 ms\n"
+      "CPU times: user 705 ms, sys: 0 ns, total: 705 ms\n",
+      "Wall time: 702 ms\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "False    238127\n",
-       "True      57097\n",
+       "False    295224\n",
        "dtype: int64"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -930,6 +933,21 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# # Fetching redirected MBIDs.\n",
+    "\n",
+    "# # in_for_redir = pd.Series(df['recording-MBID'].unique())\n",
+    "# in_for_redir = in_for_rec[out_for_rec]\n",
+    "# out_for_redir = MB_redirects.old.isin(in_for_redir)\n",
+    "\n",
+    "# out_for_redir.value_counts()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -938,7 +956,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -949,7 +967,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -976,26 +994,36 @@
     "    - Number of NOT-null rows in recording-MBID = 100.0\n",
     "    - Number of NOT-null rows in release-MBID = 75.44897552810568\n",
     "\n",
+    "\n",
     "- **Number of rec-MBIDs in track-MBID**:\n",
     "    - Total Input: 381145\n",
     "    - False: 100%\n",
     "    (no rec-MBID was found in the track-MBID)\n",
+    "\n",
+    "\n",
     "- **Number of rec-MBIDs in recording-MBID**:\n",
     "    - Total Input: 381145\n",
     "    - (True, False) = (295224, 85921)\n",
     "    - i.e. 77.457% rec-MBIDs belong to the recording-MBID table.\n",
-    "- **Number of KNOWN rec-MBIDs in redirected-MBID**:\n",
-    "    - Note: \"KNOWN rec-MBIDs\" = rec-MBIDs from the MLHD that were found in the MB recording table.\n",
-    "    - Total Input = 295224 rows\n",
-    "    - (True, False) = (57097, 238127)\n",
-    "    - i.e. 80.659% KNOWN rec-MBIDs don't have any redirects.\n",
+    "\n",
+    "\n",
     "- **Number of UNKNOWN rec-MBIDs in redirected-MBID**:\n",
     "    - Note: \"UNKNOWN rec-MBIDs\" = rec-MBIDs from the MLHD that were NOT found in the MB recording table.\n",
     "    - Total Input: 85921 rows\n",
-    "    - False: 85921\n",
-    "    - i.e. 100% of UNKNOWN rec-MBIDs don't have any redirects.\n",
+    "    - (True, False): (84773, 1148)\n",
+    "    - i.e. 98.66% of UNKNOWN rec-MBIDs have corresponding redirects.\n",
+    "\n",
+    "\n",
+    "- **Number of KNOWN rec-MBIDs in redirected-MBID**:\n",
+    "    - Note: \"KNOWN rec-MBIDs\" = rec-MBIDs from the MLHD that were found in the MB recording table.\n",
+    "    - Total Input = 295224 rows\n",
+    "    - False = 295224 rows\n",
+    "    - i.e. 100% KNOWN rec-MBIDs don't have any redirects.\n",
+    "\n",
+    "\n",
     "- **Number of rec-MBIDs in canonical-MBID table**:\n",
     "    - _pending_\n",
+    "\n",
     "\n",
     "- **Number of artist-MBIDs in MB artist table**:\n",
     "    - Total Input: 33436\n",
