modularized analytics dashboard. fixed incorrect calc in analytics

--- a/MLHD.ipynb
+++ b/MLHD.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,8 +68,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 7.08 s, sys: 2.44 s, total: 9.52 s\n",
-      "Wall time: 18.4 s\n"
+      "CPU times: user 7.07 s, sys: 2.46 s, total: 9.53 s\n",
+      "Wall time: 18.6 s\n"
      ]
     },
     {
@@ -161,8 +161,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 1.31 s, sys: 204 ms, total: 1.52 s\n",
-      "Wall time: 7.07 s\n"
+      "CPU times: user 1.24 s, sys: 150 ms, total: 1.39 s\n",
+      "Wall time: 10.4 s\n"
      ]
     },
     {
@@ -193,28 +193,28 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>ee141eff-5b22-4e8b-b01a-754b4d0e5222</td>\n",
-       "      <td>80f99633-339d-4ffd-9668-a81831dda379</td>\n",
+       "      <td>9e48544c-60ba-4d23-b741-caf7af1f4489</td>\n",
+       "      <td>bffa2d3c-52f9-415a-a027-3750ec802cfa</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>4672ac68-27ac-4843-9c19-d283018a7c17</td>\n",
-       "      <td>cd24bef4-d513-4e42-8cd4-0b8be1e654b7</td>\n",
+       "      <td>deb2bafb-d22d-42e3-bf36-4a66fff9e2ff</td>\n",
+       "      <td>9c3fd45f-4b0e-435f-8c85-79b7866928a8</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>9988c354-37ad-4325-bbeb-2a84c3e9f7de</td>\n",
-       "      <td>f941f456-33ba-4f58-8584-07475981fc0b</td>\n",
+       "      <td>7786a4a8-b7f8-4656-a1f0-887ffa6967ca</td>\n",
+       "      <td>bff4f208-81de-4b69-9139-5b693d9c18b4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>f4824cee-6648-4546-a607-196c8afa2f57</td>\n",
-       "      <td>229c3898-9d1c-41c0-9402-52ff83c18bd1</td>\n",
+       "      <td>b3fad4b6-1461-4098-814f-36ba188892c3</td>\n",
+       "      <td>687f1c8a-3acd-4ec0-a8ac-fb35a35796a0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>63324276-8731-4c6b-affc-13182c06d3eb</td>\n",
-       "      <td>dd285e20-3fbe-4310-b10e-be08aac2e4d2</td>\n",
+       "      <td>567dd691-b596-4f29-87a0-c7eca83f9a0c</td>\n",
+       "      <td>f796a23b-0fba-4af8-859d-5d480e020171</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -222,11 +222,11 @@
       ],
       "text/plain": [
        "                                    new                                   old\n",
-       "0  ee141eff-5b22-4e8b-b01a-754b4d0e5222  80f99633-339d-4ffd-9668-a81831dda379\n",
-       "1  4672ac68-27ac-4843-9c19-d283018a7c17  cd24bef4-d513-4e42-8cd4-0b8be1e654b7\n",
-       "2  9988c354-37ad-4325-bbeb-2a84c3e9f7de  f941f456-33ba-4f58-8584-07475981fc0b\n",
-       "3  f4824cee-6648-4546-a607-196c8afa2f57  229c3898-9d1c-41c0-9402-52ff83c18bd1\n",
-       "4  63324276-8731-4c6b-affc-13182c06d3eb  dd285e20-3fbe-4310-b10e-be08aac2e4d2"
+       "0  9e48544c-60ba-4d23-b741-caf7af1f4489  bffa2d3c-52f9-415a-a027-3750ec802cfa\n",
+       "1  deb2bafb-d22d-42e3-bf36-4a66fff9e2ff  9c3fd45f-4b0e-435f-8c85-79b7866928a8\n",
+       "2  7786a4a8-b7f8-4656-a1f0-887ffa6967ca  bff4f208-81de-4b69-9139-5b693d9c18b4\n",
+       "3  b3fad4b6-1461-4098-814f-36ba188892c3  687f1c8a-3acd-4ec0-a8ac-fb35a35796a0\n",
+       "4  567dd691-b596-4f29-87a0-c7eca83f9a0c  f796a23b-0fba-4af8-859d-5d480e020171"
       ]
      },
      "execution_count": 4,
@@ -271,8 +271,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 9.53 s, sys: 3.1 s, total: 12.6 s\n",
-      "Wall time: 24.9 s\n"
+      "CPU times: user 9.52 s, sys: 3.14 s, total: 12.7 s\n",
+      "Wall time: 25.1 s\n"
      ]
     },
     {
@@ -363,8 +363,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 211 ms, sys: 27.9 ms, total: 239 ms\n",
-      "Wall time: 908 ms\n"
+      "CPU times: user 234 ms, sys: 18.4 ms, total: 252 ms\n",
+      "Wall time: 925 ms\n"
      ]
     },
     {
@@ -445,7 +445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -460,8 +460,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 2.33 s, sys: 939 ms, total: 3.27 s\n",
-      "Wall time: 6.23 s\n"
+      "CPU times: user 2.36 s, sys: 735 ms, total: 3.09 s\n",
+      "Wall time: 5.99 s\n"
      ]
     },
     {
@@ -528,7 +528,7 @@
        "4  9ba7a9b9-a21c-4b12-8771-4c108b08b3e2  13b3875a-c89a-4be5-a6e4-0ca9164bc41d"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -552,7 +552,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -567,8 +567,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 506 ms, sys: 111 ms, total: 617 ms\n",
-      "Wall time: 1.33 s\n"
+      "CPU times: user 548 ms, sys: 112 ms, total: 660 ms\n",
+      "Wall time: 1.35 s\n"
      ]
     },
     {
@@ -629,7 +629,7 @@
        "4  7b4a548e-a01a-49b7-82e7-b49efeb9732c"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -644,7 +644,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -659,8 +659,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 43.2 ms, sys: 1.97 ms, total: 45.2 ms\n",
-      "Wall time: 845 ms\n"
+      "CPU times: user 41.9 ms, sys: 1.72 ms, total: 43.7 ms\n",
+      "Wall time: 824 ms\n"
      ]
     },
     {
@@ -727,7 +727,7 @@
        "4  21074eb7-3849-4d0e-bd4d-5447ff175c45  33da8f6e-4c9c-4a54-903a-d10788ceea77"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -748,7 +748,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -841,7 +841,7 @@
        "4  e427c52c-60f4-3df4-9493-2df0734d85aa  eced9a9b-cd59-40f8-a580-f27094bd8a89  "
       ]
      },
-     "execution_count": 29,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -874,7 +874,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -925,7 +925,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -961,7 +961,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -988,15 +988,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 2.62 s, sys: 257 ms, total: 2.88 s\n",
-      "Wall time: 2.87 s\n"
+      "CPU times: user 2.7 s, sys: 275 ms, total: 2.98 s\n",
+      "Wall time: 2.98 s\n"
      ]
     },
     {
@@ -1006,7 +1006,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 78,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1028,15 +1028,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 526 ms, sys: 26 µs, total: 526 ms\n",
-      "Wall time: 522 ms\n"
+      "CPU times: user 565 ms, sys: 0 ns, total: 565 ms\n",
+      "Wall time: 563 ms\n"
      ]
     },
     {
@@ -1046,7 +1046,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1075,15 +1075,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 7.65 s, sys: 0 ns, total: 7.65 s\n",
-      "Wall time: 7.66 s\n"
+      "CPU times: user 8.95 s, sys: 0 ns, total: 8.95 s\n",
+      "Wall time: 8.95 s\n"
      ]
     },
     {
@@ -1094,7 +1094,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1122,15 +1122,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 648 ms, sys: 0 ns, total: 648 ms\n",
-      "Wall time: 644 ms\n"
+      "CPU times: user 716 ms, sys: 0 ns, total: 716 ms\n",
+      "Wall time: 713 ms\n"
      ]
     },
     {
@@ -1141,7 +1141,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 92,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1163,7 +1163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1172,15 +1172,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 627 ms, sys: 3.12 ms, total: 630 ms\n",
-      "Wall time: 627 ms\n"
+      "CPU times: user 628 ms, sys: 0 ns, total: 628 ms\n",
+      "Wall time: 623 ms\n"
      ]
     },
     {
@@ -1190,7 +1190,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 95,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1213,7 +1213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1235,7 +1235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1246,7 +1246,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1266,7 +1266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -1277,7 +1277,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1297,7 +1297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1306,7 +1306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -1316,7 +1316,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1328,15 +1328,15 @@
     "Output: Boolmap of all artist-MBIDs that are present in the MB \"artist\" table and have a redirect available.\n",
     "\"\"\"\n",
     "\n",
-    "input_artists_redirect = input_artists[output_artists]\n",
+    "input_artists_redirect_2 = input_artists[output_artists]\n",
     "\n",
-    "output_artists_redirect = query_in(input_artists_redirect, MB_artist_redirects.old)\n",
-    "output_artists_redirect.value_counts()"
+    "output_artists_redirect_2 = query_in(input_artists_redirect_2, MB_artist_redirects.old)\n",
+    "output_artists_redirect_2.value_counts()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -1354,62 +1354,6 @@
        "### Number of rec-MBIDs in track_gid_redirect:\n",
        "    - Total Input: 381145\n",
        "    - False: 381145\n"
-      ],
-      "text/plain": [
-       "<IPython.core.display.Markdown object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/markdown": [
-       "\n",
-       "## recording-MBIDs\n",
-       "### Number of rec-MBIDs in recording-MBID:\n",
-       "    - Total Input: 381145 rows\n",
-       "    - (True, False) = 295214, 85931\n",
-       "    - i.e. 77.45% rec-MBIDs belong to the recording-MBID table.\n",
-       "\n",
-       "\n",
-       "### Number of UNKNOWN rec-MBIDs in redirected-MBID:\n",
-       "    - Note: \"UNKNOWN rec-MBIDs\" = rec-MBIDs from the MLHD that were NOT found in the MB recording table.\n",
-       "    - Total Input: 85931 rows\n",
-       "    - (True, False): 84783, 1148\n",
-       "    - i.e. 98.66% of UNKNOWN rec-MBIDs have corresponding redirects.\n",
-       "\n",
-       "\n",
-       "### Number of KNOWN rec-MBIDs in redirected-MBID:\n",
-       "    - Note: \"KNOWN rec-MBIDs\" = rec-MBIDs from the MLHD that were found in the MB recording table.\n",
-       "    - Total Input = 85931 rows\n",
-       "    - False = 295214 rows\n",
-       "    - i.e. 2596% KNOWN rec-MBIDs don't have any redirects.\n",
-       "\n",
-       "\n",
-       "### Number of rec-MBIDs in canonical-MBID table:\n",
-       "    - _pending_\n"
-      ],
-      "text/plain": [
-       "<IPython.core.display.Markdown object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/markdown": [
-       "\n",
-       "### Number of artist-MBIDs in MB artist table:\n",
-       "    - Total Input: 33435\n",
-       "    - True, False = 2596, 30839\n",
-       "    - i.e. 92.23% artist-MBIDs exist in the MB artist table.\n",
-       "\n",
-       "### Number of UNKNOWN artist-MBIDs in MB artist_gid_redirect table:\n",
-       "    - Total Input: 2596\n",
-       "    - True, False = 143, 2453\n",
-       "    - i.e. 94.49% artist-MBIDs exist in the MB artist table.\n"
       ],
       "text/plain": [
        "<IPython.core.display.Markdown object>"
@@ -1437,6 +1381,52 @@
     "            len(in_for_track),\n",
     "            out_for_track_redir.value_counts()[0])\n",
     "\n",
+    "\n",
+    "display(MD(report_track))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/markdown": [
+       "\n",
+       "## recording-MBIDs\n",
+       "### Number of rec-MBIDs in recording-MBID:\n",
+       "    - Total Input: 381145 rows\n",
+       "    - (True, False) = 295214, 85931\n",
+       "    - i.e. 77.45% rec-MBIDs belong to the recording-MBID table.\n",
+       "\n",
+       "\n",
+       "### Number of UNKNOWN rec-MBIDs in redirected-MBID:\n",
+       "    - Note: \"UNKNOWN rec-MBIDs\" = rec-MBIDs from the MLHD that were NOT found in the MB recording table.\n",
+       "    - Total Input: 85931 rows\n",
+       "    - (True, False): 84783, 1148\n",
+       "    - i.e. 98.66% of UNKNOWN rec-MBIDs have corresponding redirects.\n",
+       "\n",
+       "\n",
+       "### Number of KNOWN rec-MBIDs in redirected-MBID:\n",
+       "    - Note: \"KNOWN rec-MBIDs\" = rec-MBIDs from the MLHD that were found in the MB recording table.\n",
+       "    - Total Input = 295214 rows\n",
+       "    - False = 295214 rows\n",
+       "    - i.e. 100.0% KNOWN rec-MBIDs don't have any redirects.\n",
+       "\n",
+       "\n",
+       "### Number of rec-MBIDs in canonical-MBID table:\n",
+       "    - _pending_\n"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
     "report_rec = \"\"\"\n",
     "## recording-MBIDs\n",
     "### Number of rec-MBIDs in recording-MBID:\n",
@@ -1471,10 +1461,43 @@
     "            out_for_rec_redir.value_counts()[0],\n",
     "            str((out_for_rec_redir.value_counts()[1]/len(in_for_rec_redir))*100)[:5],\n",
     "            \n",
-    "            len(in_for_rec_redir),\n",
+    "            len(in_for_rec_redir_2),\n",
     "            out_for_rec_redir_2.value_counts()[0],\n",
-    "            output_artists.value_counts()[0],)\n",
+    "            # out_for_rec_redir_2.value_counts()[0],\n",
+    "            str((out_for_rec_redir_2.value_counts()[0]/len(in_for_rec_redir_2))*100)[:5]\n",
+    "            )\n",
     "\n",
+    "display(MD(report_rec))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/markdown": [
+       "\n",
+       "### Number of artist-MBIDs in MB artist table:\n",
+       "    - Total Input: 33435\n",
+       "    - True, False = 2596, 30839\n",
+       "    - i.e. 92.23% artist-MBIDs exist in the MB artist table.\n",
+       "\n",
+       "### Number of UNKNOWN artist-MBIDs in MB artist_gid_redirect table:\n",
+       "    - Total Input: 2596\n",
+       "    - True, False = 143, 2453\n",
+       "    - i.e. 94.49% artist-MBIDs exist in the MB artist table.\n"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
     "report_artist = \"\"\"\n",
     "### Number of artist-MBIDs in MB artist table:\n",
     "    - Total Input: {}\n",
@@ -1492,10 +1515,9 @@
     "            len(input_artists_redirect),\n",
     "            output_artists_redirect.value_counts()[0],\n",
     "            output_artists_redirect.value_counts()[1],\n",
-    "            str((output_artists_redirect.value_counts()[1]/len(input_artists_redirect))*100)[:5])\n",
+    "            str((output_artists_redirect.value_counts()[1]/len(input_artists_redirect))*100)[:5]\n",
+    "            )\n",
     "\n",
-    "display(MD(report_track))\n",
-    "display(MD(report_rec))\n",
     "display(MD(report_artist))"
    ]
   }
