cleaned up analytics, made easier to read

--- a/MLHD.ipynb
+++ b/MLHD.ipynb
@@ -1171,62 +1171,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "CPU times: user 628 ms, sys: 0 ns, total: 628 ms\n",
-      "Wall time: 623 ms\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "False    295214\n",
-       "dtype: int64"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "%%time\n",
-    "\n",
-    "# Testing if MBIDs that exist in MB recording table have any redirects\n",
-    "\"\"\"\n",
-    "Input: all unique recording-MBIDs from the input dataset that belong the MB \"recording\" table.\n",
-    "Output: Boolmap of all recording-MBIDs that have a redirect available.\n",
-    "\"\"\"\n",
-    "\n",
-    "in_for_rec_redir_2 = in_for_rec[out_for_rec]\n",
-    "\n",
-    "out_for_rec_redir_2 = query_in(in_for_rec_redir_2, MB_redirects.old)\n",
-    "\n",
-    "out_for_rec_redir_2.value_counts()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# # Fetching redirected MBIDs.\n",
-    "\n",
-    "# # in_for_redir = pd.Series(df['recording-MBID'].unique())\n",
-    "# in_for_redir = in_for_rec[out_for_rec]\n",
-    "# out_for_redir = MB_redirects.old.isin(in_for_redir)\n",
-    "\n",
-    "# out_for_redir.value_counts()"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1305,45 +1249,20 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 45,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "False    30839\n",
-       "dtype: int64"
-      ]
-     },
-     "execution_count": 45,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "# Checking if artist-MBIDs belong to artist ID.\n",
-    "\"\"\"\n",
-    "Input: all unique artist-MBIDs from the dataset that belong to the MB \"artist\" table.\n",
-    "Output: Boolmap of all artist-MBIDs that are present in the MB \"artist\" table and have a redirect available.\n",
-    "\"\"\"\n",
-    "\n",
-    "input_artists_redirect_2 = input_artists[output_artists]\n",
-    "\n",
-    "output_artists_redirect_2 = query_in(input_artists_redirect_2, MB_artist_redirects.old)\n",
-    "output_artists_redirect_2.value_counts()"
+    "# ANALYSIS REPORTS"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/markdown": [
-       "\n",
-       "# Analysis Report\n",
        "\n",
        "## Track-MBIDs\n",
        "\n",
@@ -1365,8 +1284,6 @@
    ],
    "source": [
     "report_track = \"\"\"\n",
-    "# Analysis Report\n",
-    "\n",
     "## Track-MBIDs\n",
     "\n",
     "### Number of rec-MBIDs in track:\n",
@@ -1387,7 +1304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -1398,15 +1315,16 @@
        "### Number of rec-MBIDs in recording-MBID:\n",
        "    - Total Input: 381145 rows\n",
        "    - (True, False) = 295214, 85931\n",
-       "    - i.e. 77.45% rec-MBIDs belong to the recording-MBID table.\n",
+       "    - i.e. 77.45% rec-MBIDs belong to the recording-MBID table. \n",
+       "    (and 22.54% rec-MBIDs DONT belong to the recording-MBID table.)\n",
        "\n",
        "\n",
        "### Number of UNKNOWN rec-MBIDs in redirected-MBID:\n",
        "    - Note: \"UNKNOWN rec-MBIDs\" = rec-MBIDs from the MLHD that were NOT found in the MB recording table.\n",
        "    - Total Input: 85931 rows\n",
        "    - (True, False): 84783, 1148\n",
-       "    - i.e. 98.66% of UNKNOWN rec-MBIDs have corresponding redirects.\n",
-       "\n",
+       "    - i.e. 1.335% of UNKNOWN rec-MBIDs don't have any corresponding redirects.\n",
+       "    (and 98.66% of UNKNOWN rec-MBIDs can be redirected to a valid rec-MBID)\n",
        "\n",
        "### Number of rec-MBIDs in canonical-MBID table:\n",
        "    - _pending_\n"
@@ -1425,15 +1343,16 @@
     "### Number of rec-MBIDs in recording-MBID:\n",
     "    - Total Input: {} rows\n",
     "    - (True, False) = {}, {}\n",
-    "    - i.e. {}% rec-MBIDs belong to the recording-MBID table.\n",
+    "    - i.e. {}% rec-MBIDs belong to the recording-MBID table. \n",
+    "    (and {}% rec-MBIDs DONT belong to the recording-MBID table.)\n",
     "\n",
     "\n",
     "### Number of UNKNOWN rec-MBIDs in redirected-MBID:\n",
     "    - Note: \"UNKNOWN rec-MBIDs\" = rec-MBIDs from the MLHD that were NOT found in the MB recording table.\n",
     "    - Total Input: {} rows\n",
     "    - (True, False): {}, {}\n",
-    "    - i.e. {}% of UNKNOWN rec-MBIDs have corresponding redirects.\n",
-    "\n",
+    "    - i.e. {}% of UNKNOWN rec-MBIDs don't have any corresponding redirects.\n",
+    "    (and {}% of UNKNOWN rec-MBIDs can be redirected to a valid rec-MBID)\n",
     "\n",
     "### Number of rec-MBIDs in canonical-MBID table:\n",
     "    - _pending_\n",
@@ -1441,11 +1360,13 @@
     "            out_for_rec.value_counts()[1],\n",
     "            out_for_rec.value_counts()[0],\n",
     "            str((out_for_rec.value_counts()[1]/len(in_for_rec))*100)[:5],\n",
+    "            str((out_for_rec.value_counts()[0]/len(in_for_rec))*100)[:5],\n",
     "            \n",
     "            len(in_for_rec_redir),\n",
     "            out_for_rec_redir.value_counts()[1],\n",
     "            out_for_rec_redir.value_counts()[0],\n",
-    "            str((out_for_rec_redir.value_counts()[1]/len(in_for_rec_redir))*100)[:5],\n",
+    "            str((out_for_rec_redir.value_counts()[0]/len(in_for_rec_redir))*100)[:5],\n",
+    "            str((out_for_rec_redir.value_counts()[1]/len(in_for_rec_redir))*100)[:5]\n",
     "            )\n",
     "\n",
     "display(MD(report_rec))"
